%%| deviceScaleFactor: 4
classDiagram
    namespace tcp {
        class tcp.TransportHandler
    }

    namespace rtu {
        class rtu.TransportHandler
    }

    namespace modbuslabs {
        class Bus {
            url: string
            processPDU(registerAddress, modbus.PDU)
        }

        class Slave {
            id: int8
            connected: bool
        }
        class RegisterMap {
            <<interface>>
            Write
            Read
        }
        class TransportHandler{
            <<interface>>
            Start
            Stop
        }

        class ControlPort {
            <<interface>>
            AddSlave()
            ConnectSlave()
        }

        class ProtocolPort {
            <<interface>>
            Info()
        }
    }

    namespace rules {
        class Engine {
        }
    }

    namespace config {
        class Config {
        }
    }

    namespace modbus {
        class modbus.PDU
    }

    namespace tui {
        class tui.Model
    }

    namespace console {
        class console.ProtocolAdapter
    }

    namespace memory {
        class memory.RegisterMap
    }

    TransportHandler <|.. tcp.TransportHandler
    TransportHandler <|.. rtu.TransportHandler

    Bus "1" --> "0..*" Slave
    ControlPort <|.. Bus : implements
    Bus ..> ProtocolPort
    Bus --> TransportHandler
    Slave --> RegisterMap
    Slave --> Engine
    Bus ..> modbus.PDU: uses


    tui.Model ..> ControlPort : uses
    ProtocolPort <|.. tui.Model : implements

    ProtocolPort <|.. console.ProtocolAdapter: implements

    RegisterMap <|.. memory.RegisterMap

    
